# Joicy

./: .gitignore  Cargo.toml  LICENSE.txt  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  build.rs
.github/workflows/: test.yml
src/: config.rs  error.rs  lib.rs  main.rs  vault_markdown.rs  workspace.rs
src/automation/: mod.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/git/: capture.rs  hooks.rs  mod.rs  repository.rs
src/mcp/: mod.rs  serve.rs  server.rs  tools.rs
src/memory/: bank.rs  mod.rs  storage.rs
src/sync/: http.rs  mod.rs  service.rs
src/utils/: mod.rs
tests/: integration_test.rs  system_test.rs
tests/system/: cli_tests.rs  memory_bank_tests.rs  mod.rs  sync_tests.rs
