[package]
name = "joicy"
version = "0.1.0"
edition = "2024"
authors = ["Denis Tu"]
description = "Team memory bank system for AI-assisted development"
license-file = "LICENSE.txt"
repository = "https://github.com/denistu/joicy"

[lib]
name = "joicy"
path = "src/lib.rs"

[[bin]]
name = "joicy"
path = "src/main.rs"

[features]
default = ["cli", "mcp", "git"]

# Core features
cli = ["clap", "tracing", "tracing-subscriber"]
mcp = ["serde", "serde_json", "tokio"]
git = ["git2", "walkdir"]

# Storage backends
storage-sqlite = ["rusqlite"]
storage-qdrant = ["qdrant-client", "tonic"]
storage-chroma = []

# Sync features
sync-http = ["reqwest", "tokio"]
sync-grpc = ["tonic", "prost"]

# Advanced features
cache-redis = ["redis"]
cache-memory = []

# Development features
dev = ["tracing", "tracing-subscriber"]
test-utils = []

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Git integration
git2 = { version = "0.18", optional = true }
walkdir = { version = "2.4", optional = true }

# Storage
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
qdrant-client = { version = "1.7", optional = true }
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }

# Cache
redis = { version = "0.24", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
config = "0.14"
toml = "0.9.10"

[dev-dependencies]
# Testing
mockito = "1.2"
tempfile = "3.10"
assert_matches = "1.5"

# Development
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
