[package]
name = "joicy"
version = "0.1.0"
edition = "2024"
authors = ["Denis Tu"]
description = "Team memory bank system for AI-assisted development"
license-file = "LICENSE.txt"
repository = "https://github.com/denistu/joicy"

[lib]
name = "joicy"
path = "src/lib.rs"

[[bin]]
name = "joicy"
path = "src/main.rs"

[features]
default = ["cli", "mcp", "git", "storage-sqlite"]

# Core features
cli = ["clap", "tracing", "tracing-subscriber"]
mcp = ["dep:serde", "dep:serde_json", "tokio", "dep:rmcp", "dep:schemars"]
# Git capture + hooks use the `git` CLI only (no libgit2 in the default build).
git = []

# Storage backends
storage-sqlite = ["rusqlite", "dep:serde_json", "dep:serde"]
storage-qdrant = ["qdrant-client", "tonic"]
storage-chroma = []

# Sync features
sync-http = ["reqwest", "tokio"]
sync-grpc = ["tonic", "prost"]

# Advanced features
cache-redis = ["redis"]
cache-memory = []

# Development features
dev = ["tracing", "tracing-subscriber"]
test-utils = []

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Storage
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
qdrant-client = { version = "1.7", optional = true }
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }

# Cache
redis = { version = "0.24", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
config = "0.14"
toml = "0.9.10"

# MCP (optional; pulled in via `mcp` feature)
rmcp = { version = "1.4", optional = true, features = [
    "server",
    "transport-io",
    "macros",
    "schemars",
] }
schemars = { version = "1.2", optional = true }

[dev-dependencies]
# Testing
mockito = "1.2"
tempfile = "3.10"
assert_matches = "1.5"

# Development
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
